--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -64,6 +63,7 @@ li {
     }
 
     .navbar-bot {
+        margin: 20px 0;
         a {
             color: white;
         }
@@ -92,31 +92,36 @@ li {
 }
 
 
-.allfoods{
+.allfoods {
 
 
-    a{
+    a {
         color: black;
     }
-    img{
+
+    img {
         width: 100%;
     }
-    .allfoods-tabs{
-        .allfood-contents{
-           .allfood-content{
-               display: none;
-               .card{
+
+    .allfoods-tabs {
+        .allfood-contents {
+            .allfood-content {
                 display: none;
-                
-               }
-               &.active{
-                display: block;
-                .card{
+
+                .card {
+                    display: none;
+
+                }
+
+                &.active {
                     display: block;
 
+                    .card {
+                        display: block;
+
+                    }
                 }
-               }
-           } 
+            }
         }
     }
 }
@@ -124,11 +129,12 @@ li {
 
 
 
-.branchs{
-    .branch1{
+.branchs {
+    .branch1 {
         border-right: 5px double black;
-        .branch1-left{
-            .branch1-left-bg{
+
+        .branch1-left {
+            .branch1-left-bg {
                 display: block;
                 width: 34px;
                 height: 34px;
@@ -137,33 +143,36 @@ li {
                 font-weight: 700;
                 text-align: center;
                 background: url('https://www.jhujian.com.tw/images/roundBg.png') 50% no-repeat;
-            
+
             }
         }
-        .branch1-right{
-            a{
-                .branch1-place{
-                   img{
-                    width: 30%;
+
+        .branch1-right {
+            a {
+                .branch1-place {
+                    img {
+                        width: 30%;
+                    }
                 }
-                }
-             
+
             }
         }
     }
-    .branch2{
-        .branch2-right{
-            a{
-                .branch2-place{
-                   img{
-                    width: 30%;
+
+    .branch2 {
+        .branch2-right {
+            a {
+                .branch2-place {
+                    img {
+                        width: 30%;
+                    }
                 }
-                }
-             
+
             }
         }
-        .branch2-left{
-            .branch2-left-bg{
+
+        .branch2-left {
+            .branch2-left-bg {
                 display: block;
                 width: 34px;
                 height: 34px;
@@ -172,21 +181,24 @@ li {
                 font-weight: 700;
                 text-align: center;
                 background: url('https://www.jhujian.com.tw/images/roundBg.png') 50% no-repeat;
-            
+
             }
         }
     }
 
 }
-.deliver-item{
-    .deliver-items{
+
+.deliver-item {
+    .deliver-items {
         .deliver-item-contents {
-            img{
+            img {
                 width: 100%;
             }
-            .deliver-item-content{
+
+            .deliver-item-content {
                 display: none;
-                &.active2{
+
+                &.active2 {
                     display: block;
                 }
             }
@@ -194,4 +206,46 @@ li {
 
     }
 
+}
+
+.footer {
+    background-color: #014260;
+    color: white;
+
+    .social {
+        .footer-fb {
+            a {
+                svg {
+                    fill: white;
+                    width: 16px;
+                    height: 16px;
+                }
+            }
+
+        }
+
+        .footer-IG {
+            a {
+                svg {
+                    fill: white;
+                    width: 16px;
+                    height: 16px;
+                }
+            }
+        }
+    }
+
+    .footer-right {
+
+        ul {
+            li {
+                margin: 20px 30px;
+                a {
+                    color: white;
+                }
+
+            }
+        }
+
+    }
 }
