--- a/林聰明/scss/style.css
+++ b/林聰明/scss/style.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', SegoeUI, 'Microsoft JhengHei', 微軟正黑體, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Segoe UI', SegoeUI, 'Microsoft JhengHei', 微軟正黑體, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   background-image: url("https://www.jhujian.com.tw//images/texture/bg.jpg");
 }
 
@@ -80,6 +80,11 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.banner {
+  width: 100%;
+  height: 80vh;
 }
 
 .banner img {
