--- a/林聰明/scss/style.scss
+++ b/林聰明/scss/style.scss
@@ -5,8 +5,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', SegoeUI, 'Microsoft JhengHei', 微軟正黑體, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background-image: url('https://www.jhujian.com.tw//images/texture/bg.jpg');
+    font-family: 'Segoe UI', SegoeUI, 'Microsoft JhengHei', 微軟正黑體, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+    background-image: url('https://www.jhujian.com.tw//images/texture/bg.jpg') ;
 }
 
 a {
@@ -86,9 +86,45 @@ li {
 }
 
 .banner {
+    // position: relative;
+    width: 100%;
+    height: 80vh;
+    // .title{
+    //     position: absolute;
+    //     top: 1%;
+    //     left: 10%;
+    // }
+    // .logo{
+    //     position: absolute;
+    //     top: 1%;
+    //     left: 10%;
+    // }
+    // .years{
+    //     position: absolute;
+    //     top: 1%;
+    //     left: 10%;
+    // }
+
+    // .master{
+    //     position: absolute;
+    //     top: 1%;
+    //     left: 10%;
+    // }
+    // .mid-img{
+    //     position: absolute;
+    //     top: 1%;
+    //     left: 10%;
+    // }
+    // .rice{
+    //     position: absolute;
+    //     top: 1%;
+    //     left: 10%;
+    // }
+
     img {
         width: 100%;
     }
+
 }
 
 
