--- a/林聰明/scss/style.scss
+++ b/林聰明/scss/style.scss
@@ -86,37 +86,32 @@ li {
 }
 
 .banner {
+    overflow: hidden;
     // position: relative;
-    width: 100%;
-    height: 80vh;
+    // width: 100%;
+    // height: 80vh;
     // .title{
-    //     position: absolute;
     //     top: 1%;
     //     left: 10%;
     // }
     // .logo{
-    //     position: absolute;
     //     top: 1%;
     //     left: 10%;
     // }
     // .years{
-    //     position: absolute;
     //     top: 1%;
     //     left: 10%;
     // }
 
     // .master{
-    //     position: absolute;
     //     top: 1%;
     //     left: 10%;
     // }
     // .mid-img{
-    //     position: absolute;
     //     top: 1%;
     //     left: 10%;
     // }
     // .rice{
-    //     position: absolute;
     //     top: 1%;
     //     left: 10%;
     // }
