--- a/vue/css/style.css
+++ b/vue/css/style.css
@@ -1,15 +1,20 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #1ab61a !important;
 }
 
-.app .scene {
+#app {
   width: 100%;
-  height: 50vh;
-}
-
-.app .scene .people {
-  right: 0px;
-  top: 0px;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
