--- a/vue/css/style.scss
+++ b/vue/css/style.scss
@@ -1,17 +1,17 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgb(26, 182, 26) !important;
 }
 
-.app {
-
-  .scene{
-    width: 100%;
-    height: 50vh;
-
-    .people {
-      right: 0px;
-      top: 0px;
+#app {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .container {
+    .title {
     }
   }
 }
