--- a/vue/css/style.css
+++ b/vue/css/style.css
@@ -4,6 +4,10 @@ body {
   background-color: #1ab61a !important;
 }
 
+a {
+  color: white !important;
+}
+
 #app {
   width: 100%;
   height: 100vh;
