--- a/vue/css/style.scss
+++ b/vue/css/style.scss
@@ -3,7 +3,9 @@ body {
   padding: 0;
   background-color: rgb(26, 182, 26) !important;
 }
-
+a{
+  color: white !important;
+}
 #app {
   width: 100%;
   height: 100vh;
